--- a/gk.bib
+++ b/gk.bib
@@ -26982,12 +26982,39 @@ Theory Group (Formerly: E1071), TU Wien},
   publisher =    {JSTOR}
 }
 @article{BorJohThr10,
-  title={A method for measuring and decomposing electoral bias for the three-party case, illustrated by the British case},
-  author={Borisyuk, Galina and Johnston, Ron and Thrasher, Michael and Rallings, Colin},
-  journal={Electoral Studies},
-  volume={29},
-  number={4},
-  pages={733--745},
-  year={2010},
-  publisher={Elsevier}
+  title =        {A method for measuring and decomposing electoral
+                  bias for the three-party case, illustrated by the
+                  British case},
+  author =       {Borisyuk, Galina and Johnston, Ron and Thrasher,
+                  Michael and Rallings, Colin},
+  journal =      {Electoral Studies},
+  volume =       {29},
+  number =       {4},
+  pages =        {733--745},
+  year =         {2010},
+  publisher =    {Elsevier}
+}
+@article{JohRosPat99,
+  title =        {Integrating and decomposing the sources of partisan
+                  bias: Brookes' method and the impact of
+                  redistricting in Great Britain},
+  author =       {Johnston, Ron and Rossiter, David and Pattie,
+                  Charles},
+  journal =      {Electoral studies},
+  volume =       {18},
+  number =       {3},
+  pages =        {367--378},
+  year =         {1999},
+  publisher =    {Elsevier}
+}
+@article{March57,
+  title =        {Party legislative representation as a function of
+                  election results},
+  author =       {March, James G},
+  journal =      {Public Opinion Quarterly},
+  volume =       {21},
+  number =       {4},
+  pages =        {521--542},
+  year =         {1957},
+  publisher =    {Oxford University Press}
 }
