--- a/gk.bib
+++ b/gk.bib
@@ -27018,3 +27018,54 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1957},
   publisher =    {Oxford University Press}
 }
+@article{FriHol08,
+  title =        {Optimal gerrymandering: sometimes pack, but never
+                  crack},
+  author =       {Friedman, John N and Holden, Richard T},
+  journal =      {American Economic Review},
+  volume =       {98},
+  number =       {1},
+  pages =        {113--44},
+  year =         {2008}
+}
+@article{PupTas09,
+  title =        {Optimal redistricting under geographical
+                  constraints: Why `pack and crack' does not work},
+  author =       {Puppe, Clemens and Tasnadi, Attila},
+  journal =      {Economics Letters},
+  volume =       {105},
+  number =       {1},
+  pages =        {93--96},
+  year =         {2009},
+  publisher =    {Elsevier}
+}
+@article{CoaKni07,
+  title =        {Socially optimal districting: a theoretical and
+                  empirical exploration},
+  author =       {Coate, Stephen and Knight, Brian},
+  journal =      {The Quarterly Journal of Economics},
+  volume =       {122},
+  number =       {4},
+  pages =        {1409--1471},
+  year =         {2007},
+  publisher =    {MIT Press}
+}
+@article{YosMur09,
+  title =        {Partisan gerrymandering and population instability:
+                  Completing the redistricting puzzle},
+  author =       {Yoshinaka, Antoine and Murphy, Chad},
+  journal =      {Political Geography},
+  volume =       {28},
+  number =       {8},
+  pages =        {451--462},
+  year =         {2009},
+  publisher =    {Elsevier}
+}
+@book{Mann78,
+  title =        {Unsafe at any margin: Interpreting congressional
+                  elections},
+  author =       {Mann, Thomas E},
+  volume =       {220},
+  year =         {1978},
+  publisher =    {Aei Press}
+}
