--- a/gk.bib
+++ b/gk.bib
@@ -27059,3 +27059,37 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1978},
   publisher =    {Aei Press}
 }
+@article{Brookes60,
+  title =        {The analysis of distorted representation in
+                  two-party single-member elections},
+  author =       {Brookes, Ralph H},
+  journal =      {Political Science},
+  volume =       {12},
+  number =       {2},
+  pages =        {158--167},
+  year =         {1960},
+  publisher =    {SAGE Publications Sage UK: London, England}
+}
+@article{Warrington18,
+  title =        {Quantifying gerrymandering using the vote
+                  distribution},
+  author =       {Warrington, Gregory S},
+  journal =      {Election Law Journal},
+  volume =       {17},
+  number =       {1},
+  pages =        {39--57},
+  year =         {2018}
+}
+@article{Warrington18b,
+  title =        {Introduction to the declination function for
+                  gerrymanders},
+  author =       {Warrington, Gregory S},
+  journal =      {arXiv preprint arXiv:1803.04799},
+  year =         {2018}
+}
+@article{Warrington18c,
+  title =        {A comparison of gerrymandering metrics},
+  author =       {Warrington, Gregory S},
+  journal =      {arXiv preprint arXiv:1805.12572},
+  year =         {2018}
+}
