--- a/gk.bib
+++ b/gk.bib
@@ -27093,3 +27093,11 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv preprint arXiv:1805.12572},
   year =         {2018}
 }
+@article{WanRem18,
+  title =        {An Antidote for Gobbledygook: Organizing the Judge's
+                  Partisan Gerrymandering Toolkit into a Two-Part
+                  Test},
+  author =       {Wang, Samuel and Remlinger, Brian},
+  url =          {https://ssrn.com/abstract=3158123},
+  year =         {2018}
+}
