--- a/gk.bib
+++ b/gk.bib
@@ -27101,3 +27101,10 @@ Theory Group (Formerly: E1071), TU Wien},
   url =          {https://ssrn.com/abstract=3158123},
   year =         {2018}
 }
+@book{Blackburn03,
+  title =        {Ethics: A very short introduction},
+  author =       {Blackburn, Simon},
+  volume =       {80},
+  year =         {2003},
+  publisher =    {Oxford University Press}
+}
