--- a/gk.bib
+++ b/gk.bib
@@ -27108,3 +27108,12 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2003},
   publisher =    {Oxford University Press}
 }
+@article{Green09,
+  title =        {The cognitive neuroscience of moral judgment},
+  author =       {Greene, Joshua D},
+  journal =      {The cognitive neurosciences},
+  volume =       {4},
+  pages =        {1--48},
+  year =         {2009},
+  publisher =    {MIT Press, Cambridge, MA}
+}
