--- a/gk.bib
+++ b/gk.bib
@@ -27117,3 +27117,11 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2009},
   publisher =    {MIT Press, Cambridge, MA}
 }
+@article{FifHigIma,
+  title =        {A new automated redistricting simulator using markov
+                  chain monte carlo},
+  author =       {Fifield, Benjamin and Higgins, Michael and Imai,
+                  Kosuke and Tarr, Alexander},
+  journal =      {Work. Pap., Princeton Univ., Princeton, NJ},
+  year =         {2018}
+}
