--- a/gk.bib
+++ b/gk.bib
@@ -27117,7 +27117,7 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2009},
   publisher =    {MIT Press, Cambridge, MA}
 }
-@article{FifHigIma,
+@article{FifHigIma18,
   title =        {A new automated redistricting simulator using markov
                   chain monte carlo},
   author =       {Fifield, Benjamin and Higgins, Michael and Imai,
