--- a/gk.bib
+++ b/gk.bib
@@ -25966,7 +25966,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{Wang16,
   title =        {Three tests for practical evaluation of partisan
                   gerrymandering},
-  author =       {Wang, Samuel S-H},
+  author =       {Wang, Samuel},
   journal =      {Stanford Law Review},
   volume =       {68},
   pages =        {1263},
@@ -27124,4 +27124,12 @@ Theory Group (Formerly: E1071), TU Wien},
                   Kosuke and Tarr, Alexander},
   journal =      {Work. Pap., Princeton Univ., Princeton, NJ},
   year =         {2018}
+}
+@article{Veomett18,
+  title =        {Efficiency Gap, Voter Turnout, and the Efficiency
+                  Principle},
+  author =       {Veomett, Ellen},
+  journal =      {Election Law Journal: Rules, Politics, and Policy},
+  year =         {2018},
+  publisher =    {Mary Ann Liebert}
 }
