--- a/gk.bib
+++ b/gk.bib
@@ -25956,7 +25956,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{Wang16b,
   title =        {Three Practical Tests for Gerrymandering:
                   Application to Maryland and Wisconsin},
-  author =       {Wang, Samuel S-H},
+  author =       {Wang, Samuel},
   journal =      {Election Law Journal},
   volume =       {15},
   number =       {4},
