--- a/gk.bib
+++ b/gk.bib
@@ -27115,7 +27115,8 @@ Theory Group (Formerly: E1071), TU Wien},
   volume =       {4},
   pages =        {1--48},
   year =         {2009},
-  publisher =    {MIT Press, Cambridge, MA}
+  address =      {Cambridge, MA},
+  publisher =    {MIT Press}
 }
 @article{FifHigIma18,
   title =        {A new automated redistricting simulator using markov
