--- a/gk.bib
+++ b/gk.bib
@@ -25312,7 +25312,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 @article{CheRod13,
   title={Unintentional gerrymandering: Political geography and electoral bias in legislatures},
-  author={Chen, Jowei and Rodden, Jonathan and others},
+  author={Chen, Jowei and Rodden, Jonathan},
   journal={Quarterly Journal of Political Science},
   volume={8},
   number={3},
@@ -27133,4 +27133,15 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {Election Law Journal: Rules, Politics, and Policy},
   year =         {2018},
   publisher =    {Mary Ann Liebert}
+}
+@article{McCPooRos09,
+  title =        {Does gerrymandering cause polarization?},
+  author =       {McCarty, Nolan and Poole, Keith T and Rosenthal,
+                  Howard},
+  journal =      {American Journal of Political Science},
+  volume =       {53},
+  number =       {3},
+  pages =        {666--680},
+  year =         {2009},
+  publisher =    {Wiley Online Library}
 }
