--- a/gk.bib
+++ b/gk.bib
@@ -27145,3 +27145,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2009},
   publisher =    {Wiley Online Library}
 }
+@article{SteMcG18,
+  title =        {The measure of a metric: The debate over quantifying
+                  partisan gerrymandering},
+  author =       {Stephanopoulos, Nicholas O and McGhee, Eric M},
+  journal =      {Stan. L. Rev.},
+  volume =       {70},
+  pages =        {1503},
+  year =         {2018},
+  publisher =    {HeinOnline}
+}
