--- a/gk.bib
+++ b/gk.bib
@@ -25984,7 +25984,7 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 @article{SteMcG15,
   title =        {Partisan gerrymandering and the efficiency gap},
-  author =       {Stephanopoulos, Nicholas O and McGhee, Eric},
+  author =       {Stephanopoulos, Nicholas O and McGhee, Eric M.},
   journal =      {The University of Chicago Law Review},
   pages =        {831--900},
   year =         {2015}
@@ -25992,7 +25992,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{McGhee14,
   title =        {Measuring Partisan Bias in Single-Member District
                   Electoral Systems},
-  author =       {McGhee, Eric},
+  author =       {McGhee, Eric M.},
   journal =      {Legislative Studies Quarterly},
   volume =       {39},
   number =       {1},
@@ -26001,7 +26001,7 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 @article{McGhee17,
   title =        {Measuring efficiency in redistricting},
-  author =       {McGhee, Eric},
+  author =       {McGhee, Eric M.},
   journal =      {Election Law Journal: Rules, Politics, and Policy},
   volume =       {16},
   number =       {4},
@@ -27148,7 +27148,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{SteMcG18,
   title =        {The measure of a metric: The debate over quantifying
                   partisan gerrymandering},
-  author =       {Stephanopoulos, Nicholas O and McGhee, Eric M},
+  author =       {Stephanopoulos, Nicholas O and McGhee, Eric M.},
   journal =      {Stan. L. Rev.},
   volume =       {70},
   pages =        {1503},
