--- a/gk.bib
+++ b/gk.bib
@@ -27155,3 +27155,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2018},
   publisher =    {HeinOnline}
 }
+@article{Cho17,
+  title =        {Measuring partisan fairness: How well does the
+                  efficiency gap guard against sophisticated as well
+                  as simple-minded modes of partisan discrimination},
+  author =       {Cho, Wendy K Tam},
+  journal =      {U. Pa. L. Rev. Online},
+  volume =       {166},
+  pages =        {17},
+  year =         {2017},
+  publisher =    {HeinOnline}
+}
