--- a/gk.bib
+++ b/gk.bib
@@ -27166,3 +27166,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2017},
   publisher =    {HeinOnline}
 }
+@article{Reynolds05,
+  title =        {Reserved seats in national legislatures: A research
+                  note},
+  author =       {Reynolds, Andrew},
+  journal =      {Legislative Studies Quarterly},
+  volume =       {30},
+  number =       {2},
+  pages =        {301--310},
+  year =         {2005},
+  publisher =    {Wiley Online Library}
+}
