--- a/gk.bib
+++ b/gk.bib
@@ -27177,3 +27177,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2005},
   publisher =    {Wiley Online Library}
 }
+@article{Lijphart04,
+  title =        {Constitutional design for divided societies},
+  author =       {Lijphart, Arend},
+  journal =      {Journal of democracy},
+  volume =       {15},
+  number =       {2},
+  pages =        {96--109},
+  year =         {2004},
+  publisher =    {Johns Hopkins University Press}
+}
