--- a/gk.bib
+++ b/gk.bib
@@ -27187,3 +27187,31 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2004},
   publisher =    {Johns Hopkins University Press}
 }
+@article{Erikson72,
+  title =        {Malapportionment, gerrymandering, and party fortunes
+                  in congressional elections},
+  author =       {Erikson, Robert S},
+  journal =      {American Political Science Review},
+  volume =       {66},
+  number =       {4},
+  pages =        {1234--1245},
+  year =         {1972},
+  publisher =    {Cambridge University Press}
+}
+@article{Jackman94,
+  title =        {Measuring electoral bias: Australia, 1949--93},
+  author =       {Jackman, Simon},
+  journal =      {British Journal of Political Science},
+  volume =       {24},
+  number =       {3},
+  pages =        {319--357},
+  year =         {1994},
+  publisher =    {Cambridge University Press}
+}
+@book{Campbell96,
+  title =        {Cheap seats: the Democratic Party's advantage in US
+                  House elections},
+  author =       {Campbell, James E},
+  year =         {1996},
+  publisher =    {The Ohio State University Press}
+}
