--- a/gk.bib
+++ b/gk.bib
@@ -27215,3 +27215,12 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1996},
   publisher =    {The Ohio State University Press}
 }
+@article{GarPar91,
+  title =        {Representation, swing, and bias in US presidential
+                  elections, 1872-1988},
+  author =       {Garand, James C and Parent, T Wayne},
+  journal =      {American Journal of Political Science},
+  pages =        {1011--1031},
+  year =         {1991},
+  publisher =    {JSTOR}
+}
