--- a/gk.bib
+++ b/gk.bib
@@ -27224,3 +27224,44 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1991},
   publisher =    {JSTOR}
 }
+@article{GilMat99,
+  title =        {Structural constraints on partisan bias under the
+                  efficient gerrymander},
+  author =       {Gilligan, Thomas W and Matsusaka, John G},
+  journal =      {Public Choice},
+  volume =       {100},
+  number =       {1-2},
+  pages =        {65--84},
+  year =         {1999},
+  publisher =    {Springer}
+}
+@article{BraGro91,
+  title =        {Sectional differences in partisan bias and electoral
+                  responsiveness in US House elections, 1850--1980},
+  author =       {Brady, David W and Grofman, Bernard},
+  journal =      {British Journal of Political Science},
+  volume =       {21},
+  number =       {2},
+  pages =        {247--256},
+  year =         {1991},
+  publisher =    {Cambridge University Press}
+}
+@article{NieJac91,
+  title =        {Bias and responsiveness in state legislative
+                  districting},
+  author =       {Niemi, Richard G and Jackman, Simon},
+  journal =      {Legislative Studies Quarterly},
+  pages =        {183--202},
+  year =         {1991},
+  publisher =    {JSTOR}
+}
+@article{Nagle15,
+  title =        {Measures of partisan bias for legislating fair
+                  elections},
+  author =       {Nagle, John F},
+  journal =      {Election Law Journal},
+  volume =       {14},
+  number =       {4},
+  pages =        {346--360},
+  year =         {2015}
+}
