--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -121,19 +121,14 @@
   OPTannote =    {}
 }
 
-@Article{IacKinPor18, 
+@Article{IacKinPor18,
   author =       {Stefano M. Iacus and Gary King and Giuseppe Porro},
   title =        {A Theory of Statistical Inference for Matching
                   Methods in Causal Research},
   journal =      {Political Analysis},
-  year =         {2018},
-  OPTkey =       {},
-  OPTvolume =    {},
-  OPTnumber =    {},
-  pages =     {1--23},
-  OPTmonth =     {},
-  note =         {http://j.mp/Nt9TkZ},
-  OPTannote =    {}
+  year =         2018,
+  pages =        {1--23},
+  url =          {http://j.mp/Nt9TkZ}
 }
 
 @Article{KasKinSon15a,
