--- a/gk.bib
+++ b/gk.bib
@@ -27265,3 +27265,12 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {346--360},
   year =         {2015}
 }
+
+@inproceedings{PerTucCho17,
+title	= {Regularizing Neural Networks by Penalizing Confident Output Distributions},
+author	= {Gabriel Pereyra and George Tucker and Jan Chorowski and Łukasz Kaiser and Geoffrey Hinton},
+year	= {2017},
+URL	= {https://arxiv.org/abs/1701.06548}
+}
+
+
