--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -128,7 +128,7 @@
   journal =      {Political Analysis},
   year =         2018,
   pages =        {1--23},
-  url =          {http://j.mp/Nt9TkZ}
+  url =          {j.mp/Nt9TkZ}
 }
 
 @Article{KasKinSon15a,
@@ -2577,4 +2577,32 @@ pages={1037--1060},
   year =         {2018},
   doi =          {10.7910/DVN/C0DBAE},
   url =          {https://doi.org/10.7910/DVN/C0DBAE}
+}
+@article{HerWis08,
+  title =        {Gerrymanders and theories of law making: A study of
+                  legislative redistricting in Illinois},
+  author =       {Herron, Michael C and Wiseman, Alan E},
+  journal =      {The Journal of Politics},
+  volume =       {70},
+  number =       {1},
+  pages =        {151--167},
+  year =         {2008}
+}
+@article{McCPooRos09,
+  title =        {Does gerrymandering cause polarization?},
+  author =       {McCarty, Nolan and Poole, Keith T and Rosenthal,
+                  Howard},
+  journal =      {American Journal of Political Science},
+  volume =       {53},
+  number =       {3},
+  pages =        {666--680},
+  year =         {2009},
+  publisher =    {Wiley Online Library}
+}
+@book{Brunell10,
+  title =        {Redistricting and representation: Why competitive
+                  elections are bad for America},
+  author =       {Brunell, Thomas},
+  year =         {2010},
+  publisher =    {Routledge}
 }
