--- a/gk.bib
+++ b/gk.bib
@@ -27272,5 +27272,31 @@ author	= {Gabriel Pereyra and George Tucker and Jan Chorowski and Łukasz Kaiser
 year	= {2017},
 URL	= {https://arxiv.org/abs/1701.06548}
 }
-
-
+@article{HerWis08,
+  title =        {Gerrymanders and theories of law making: A study of
+                  legislative redistricting in Illinois},
+  author =       {Herron, Michael C and Wiseman, Alan E},
+  journal =      {The Journal of Politics},
+  volume =       {70},
+  number =       {1},
+  pages =        {151--167},
+  year =         {2008}
+}
+@article{McCPooRos09,
+  title =        {Does gerrymandering cause polarization?},
+  author =       {McCarty, Nolan and Poole, Keith T and Rosenthal,
+                  Howard},
+  journal =      {American Journal of Political Science},
+  volume =       {53},
+  number =       {3},
+  pages =        {666--680},
+  year =         {2009},
+  publisher =    {Wiley Online Library}
+}
+@book{Brunell10,
+  title =        {Redistricting and representation: Why competitive
+                  elections are bad for America},
+  author =       {Brunell, Thomas},
+  year =         {2010},
+  publisher =    {Routledge}
+}
