--- a/gk.bib
+++ b/gk.bib
@@ -27267,10 +27267,12 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 
 @inproceedings{PerTucCho17,
-title	= {Regularizing Neural Networks by Penalizing Confident Output Distributions},
-author	= {Gabriel Pereyra and George Tucker and Jan Chorowski and Łukasz Kaiser and Geoffrey Hinton},
-year	= {2017},
-URL	= {https://arxiv.org/abs/1701.06548}
+  title =        {Regularizing Neural Networks by Penalizing Confident
+                  Output Distributions},
+  author =       {Gabriel Pereyra and George Tucker and Jan Chorowski
+                  and Łukasz Kaiser and Geoffrey Hinton},
+  year =         {2017},
+  URL =          {https://arxiv.org/abs/1701.06548}
 }
 @article{HerWis08,
   title =        {Gerrymanders and theories of law making: A study of
@@ -27299,4 +27301,15 @@ URL	= {https://arxiv.org/abs/1701.06548}
   author =       {Brunell, Thomas},
   year =         {2010},
   publisher =    {Routledge}
+}
+@article{GerLew04,
+  title =        {Beyond the median: Voter preferences, district
+                  heterogeneity, and political representation},
+  author =       {Gerber, Elisabeth R and Lewis, Jeffrey B},
+  journal =      {Journal of Political Economy},
+  volume =       {112},
+  number =       {6},
+  pages =        {1364--1383},
+  year =         {2004},
+  publisher =    {The University of Chicago Press}
 }
