--- a/gk.bib
+++ b/gk.bib
@@ -25844,8 +25844,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{CerCurIac16,
   title =        {iSA: A fast, scalable and accurate algorithm for
                   sentiment analysis of social media content},
-  author =       {Andrea Ceron and Luigi Curini and Stefano M.
-                  Iacus},
+  author =       {Andrea Ceron and Luigi Curini and Stefano M. Iacus},
   journal =      {Information Sciences},
   volume =       {367},
   pages =        {105--124},
