--- a/gk.bib
+++ b/gk.bib
@@ -27301,3 +27301,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2004},
   publisher =    {The University of Chicago Press}
 }
+@article{Sen76,
+  title={Liberty, unanimity and rights},
+  author={Sen, Amartya},
+  journal={Economica},
+  volume={43},
+  number={171},
+  pages={217--245},
+  year={1976},
+  publisher={JSTOR}
+}
