--- a/gk.bib
+++ b/gk.bib
@@ -27302,12 +27302,22 @@ Theory Group (Formerly: E1071), TU Wien},
   publisher =    {The University of Chicago Press}
 }
 @article{Sen76,
-  title={Liberty, unanimity and rights},
-  author={Sen, Amartya},
-  journal={Economica},
-  volume={43},
-  number={171},
-  pages={217--245},
-  year={1976},
-  publisher={JSTOR}
+  title =        {Liberty, unanimity and rights},
+  author =       {Sen, Amartya},
+  journal =      {Economica},
+  volume =       {43},
+  number =       {171},
+  pages =        {217--245},
+  year =         {1976},
+  publisher =    {JSTOR}
+}
+@article{HofGro90,
+  title =        {Comparing the compactness of California
+                  congressional districts under three different plans:
+                  1980, 1982, and 1984},
+  author =       {Hofeller, Thomas and Grofman, Bernard},
+  journal =      {Political Gerrymandering and the Courts},
+  pages =        {281--88},
+  year =         {1990},
+  publisher =    {Agathon New York}
 }
