--- a/gk.bib
+++ b/gk.bib
@@ -25243,10 +25243,11 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher={JSTOR}
 }
 @misc{Adams76,
-  title={Model State Reapportionment Process: The Continuing Quest for Fair and Effective Representation, A},
-  author={Adams, Bruce},
-  year={1976},
-  publisher={HeinOnline}
+  title =        {Model State Reapportionment Process: The Continuing
+                  Quest for Fair and Effective Representation, A},
+  author =       {Adams, Bruce},
+  year =         {1976},
+  publisher =    {HeinOnline}
 }
 @article{Wells82,
   title={How to inhibit gerrymandering: The purpose of districting criteria},
@@ -25368,10 +25369,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher={Elsevier}
 }
 @article{Fechner66,
-  title={Elements of psychophysics. Vol. I. [Originally published 1860]},
-  author={Fechner, Gustav},
-  year={1966},
-  publisher={New York}
+  title =        {Elements of psychophysics. Vol. I. [Originally
+                  published 1860]},
+  author =       {Fechner, Gustav Theodor},
+  journal =      {Readings in the history of psychology},
+  year =         {1966},
+  publisher =    {New York}
 }
 
 @inproceedings{McMLinVan03,
@@ -27320,4 +27323,10 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {281--88},
   year =         {1990},
   publisher =    {Agathon New York}
+}
+@techreport{ShiTom93,
+  title =        {Good features to track},
+  author =       {Shi, Jianbo and Tomasi, Carlo},
+  year =         {1993},
+  institution =  {Cornell University}
 }
