--- a/gk.bib
+++ b/gk.bib
@@ -27330,3 +27330,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1993},
   institution =  {Cornell University}
 }
+@book{Cox97,
+  title =        {Making votes count: strategic coordination in the
+                  world's electoral systems},
+  author =       {Cox, Gary W},
+  year =         {1997},
+  publisher =    {Cambridge University Press}
+}
