--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2578,3 +2578,11 @@ pages={1037--1060},
   doi =          {10.7910/DVN/C0DBAE},
   url =          {https://doi.org/10.7910/DVN/C0DBAE}
 }
+
+@article {KauKinKom18,
+  title =        {How to Measure Legislative District Compactness If
+                  You Only Know it When You See It},
+  journal =      {American Journal of Political Science},
+  year =         {Forthcoming},
+  author =       {Aaron Kaufman and Gary King and Mayya Komisarchik}
+}
