--- a/gk.bib
+++ b/gk.bib
@@ -27333,7 +27333,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @book{Cox97,
   title =        {Making votes count: strategic coordination in the
                   world's electoral systems},
-  author =       {Cox, Gary W},
+  author =       {Cox, Gary W.},
   year =         {1997},
   publisher =    {Cambridge University Press}
 }
