--- a/gk.bib
+++ b/gk.bib
@@ -27337,3 +27337,21 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1997},
   publisher =    {Cambridge University Press}
 }
+@article{Duchin18,
+  title =        {Gerrymandering metrics: How to measure? What's the
+                  baseline?},
+  author =       {Duchin, Moon},
+  journal =      {arXiv:1801.02064},
+  year =         {2018}
+}
+@article{ChiFriPeg17,
+  title =        {Assessing significance in a Markov chain without
+                  mixing},
+  author =       {Chikina, Maria and Frieze, Alan and Pegden, Wesley},
+  journal =      {Proceedings of the National Academy of Sciences},
+  volume =       {114},
+  number =       {11},
+  pages =        {2860--2864},
+  year =         {2017},
+  publisher =    {National Academy of Sciences}
+}
