--- a/gk.bib
+++ b/gk.bib
@@ -27355,3 +27355,16 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2017},
   publisher =    {National Academy of Sciences}
 }
+@Unpublished{DucGlaHen18,
+  author =       {Moon Duchin and Taissa Gladkova and Eugene
+                  Henninger-Voss and Ben Klingensmith and Heather
+                  Newman and Hannah Wheelen},
+  title =        {Obstructions to Proportional Representation:
+                  Republicans in Massachusetts},
+  note =         {Tufts University},
+  OPTkey =       {},
+  OPTmonth =     {},
+  OPTyear =      {2018},
+  OPTannote =    {}
+}
+
