--- a/gk.bib
+++ b/gk.bib
@@ -27367,4 +27367,17 @@ Theory Group (Formerly: E1071), TU Wien},
   OPTyear =      {2018},
   OPTannote =    {}
 }
-
+@book{GudTay12,
+  title =        {Seats, votes, and the spatial organisation of
+                  elections},
+  author =       {Gudgin, Graham and Taylor, Peter J},
+  year =         {2012},
+  publisher =    {ECPR Press}
+}
+@book{AnsBraFio88,
+  title =        {Turnout and the Calculation of Swing Ratios},
+  author =       {Ansolabehere, Stephen and Brady, David W and
+                  Fiorina, Morris P},
+  year =         {1988},
+  publisher =    {Graduate School of Business, Stanford University}
+}
