--- a/gk.bib
+++ b/gk.bib
@@ -23279,7 +23279,7 @@ author = {{National Center for Education Statistics}},
 }
 @article{RobMor87,
   title =        {The foundations of confounding in epidemiology},
-  author =       {Robins, JM and Morgenstern, H},
+  author =       {Robins, James M and Morgenstern, H},
   journal =      {Computers \& Mathematics with Applications},
   volume =       {14},
   number =       {9},
