--- a/gk.bib
+++ b/gk.bib
@@ -23423,7 +23423,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @article{RobHerBru00,
   title =        {Marginal structural models and causal inference in
                   epidemiology},
-  author =       {Robins, James M and Hernan, Miguel Angel and
+  author =       {James M Robins and Miguel Angel Hernan and
                   Brumback, Babette},
   journal =      {Epidemiology},
   volume =       {11},
