--- a/gk.bib
+++ b/gk.bib
@@ -23423,8 +23423,8 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @article{RobHerBru00,
   title =        {Marginal structural models and causal inference in
                   epidemiology},
-  author =       {James M Robins and Miguel Angel Hernan and
-                  Brumback, Babette},
+  author =       {James M Robins and Miguel A Hernan and
+                  Babette Brumback},
   journal =      {Epidemiology},
   volume =       {11},
   number =       {5},
