--- a/gk.bib
+++ b/gk.bib
@@ -20180,7 +20180,7 @@ journal = {Science}
 }
 
 @Article{VanHer12,
-  author =       {Tyler J. VanderWeele and Miguel A. Hernan},
+  author =       {Tyler J. VanderWeele and Miguel A Hernan},
   title =        {Causal Inference Under Multiple Versions of
                   Treatment},
   journal =      {Journal of Causal Inference},
