--- a/gk.bib
+++ b/gk.bib
@@ -27381,3 +27381,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1988},
   publisher =    {Graduate School of Business, Stanford University}
 }
+@article{KinGebMel18,
+  title =        {The Impact of Molecular Rigidity on Diamondoid
+                  Self-Assembly},
+  author =       {Ella M. King and Matthew A. Gebbie and Nicholas A.
+                  Melosh},
+  journal =      {arXiv:1801.02064},
+  year =         {2018}
+}
+
+
