--- a/gk.bib
+++ b/gk.bib
@@ -27389,5 +27389,22 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv:1801.02064},
   year =         {2018}
 }
+@data{Klarner18,
+  author =       {Klarner, Carl},
+  publisher =    {Harvard Dataverse},
+  title =        {State Legislative Election Returns, 1967-2016:
+                  Restructured For Use},
+  year =         {2018},
+  doi =          {10.7910/DVN/DRSACA},
+  url =          {https://doi.org/10.7910/DVN/DRSACA}
+}
 
-
+@data{DVN/DRSACA_2018,
+  author =       {Klarner, Carl},
+  publisher =    {Harvard Dataverse},
+  title =        {State Legislative Election Returns, 1967-2016:
+                  Restructured For Use},
+  year =         {2018},
+  doi =          {10.7910/DVN/DRSACA},
+  url =          {https://doi.org/10.7910/DVN/DRSACA}
+}
