--- a/gk.bib
+++ b/gk.bib
@@ -27398,3 +27398,15 @@ Theory Group (Formerly: E1071), TU Wien},
   doi =          {10.7910/DVN/DRSACA},
   url =          {https://doi.org/10.7910/DVN/DRSACA}
 }
+@article{CaiChoLiu18,
+  title =        {A Reasonable Bias Approach to Gerrymandering: Using
+                  Automated Plan Generation to Evaluate Redistricting
+                  Proposals},
+  author =       {Cain, Bruce E and Tam Cho, Wendy K and Liu, Yan Y
+                  and Zhang, Emily R},
+  journal =      {Wm. \& Mary L. Rev.},
+  volume =       {59},
+  pages =        {1521},
+  year =         {2017},
+  publisher =    {HeinOnline}
+}
