--- a/gk.bib
+++ b/gk.bib
@@ -27410,3 +27410,73 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2017},
   publisher =    {HeinOnline}
 }
+@article{Hainmueller12,
+  title =        {Entropy balancing for causal effects: A multivariate
+                  reweighting method to produce balanced samples in
+                  observational studies},
+  author =       {Hainmueller, Jens},
+  journal =      {Political Analysis},
+  volume =       {20},
+  number =       {1},
+  pages =        {25--46},
+  year =         {2012},
+  publisher =    {Cambridge University Press}
+}
+@article{PimPagLen18,
+  title =        {Optimal multilevel matching using network flows: An
+                  application to a summer reading intervention},
+  author =       {Pimentel, Samuel D and Page, Lindsay C and Lenard,
+                  Matthew and Keele, Luke},
+  journal =      {The Annals of Applied Statistics},
+  volume =       {12},
+  number =       {3},
+  pages =        {1479--1505},
+  year =         {2018},
+  publisher =    {Institute of Mathematical Statistics}
+}
+@article{PimYooKee15,
+  title =        {Variable-ratio matching with fine balance in a study
+                  of the Peer Health Exchange},
+  author =       {Pimentel, Samuel D and Yoon, Frank and Keele, Luke},
+  journal =      {Statistics in medicine},
+  volume =       {34},
+  number =       {30},
+  pages =        {4070--4082},
+  year =         {2015},
+  publisher =    {Wiley Online Library}
+}
+@article{RosRosSil07,
+  title =        {Minimum distance matched sampling with fine balance
+                  in an observational study of treatment for ovarian
+                  cancer},
+  author =       {Rosenbaum, Paul R and Ross, Richard N and Silber,
+                  Jeffrey H},
+  journal =      {Journal of the American Statistical Association},
+  volume =       {102},
+  number =       {477},
+  pages =        {75--83},
+  year =         {2007},
+  publisher =    {Taylor \& Francis}
+}
+@article{VisZub18,
+  title =        {Handling limited overlap in observational studies
+                  with cardinality matching},
+  author =       {Visconti, Giancarlo and Zubizarreta, Jos{\'e} R},
+  journal =      {Observational Studies},
+  volume =       4,
+  pages =        {217-249},
+  year =         {2018}
+}
+@article{ZubParRos14,
+  title =        {Matching for balance, pairing for heterogeneity in
+                  an observational study of the effectiveness of
+                  for-profit and not-for-profit high schools in Chile},
+  author =       {Zubizarreta, Jos{\'e} R and Paredes, Ricardo D and
+                  Rosenbaum, Paul R and others},
+  journal =      {The Annals of Applied Statistics},
+  volume =       {8},
+  number =       {1},
+  pages =        {204--231},
+  year =         {2014},
+  publisher =    {Institute of Mathematical Statistics}
+}
