--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2586,3 +2586,13 @@ pages={1037--1060},
   year =         {Forthcoming},
   author =       {Aaron Kaufman and Gary King and Mayya Komisarchik}
 }
+
+@data{NieKin18,
+  author =       {Nielsen, Richard and King, Gary},
+  publisher =    {Harvard Dataverse},
+  title =        {Replication Data for: Why Propensity Scores Should
+                  Not Be Used for Matching},
+  year =         {2018},
+  doi =          {10.7910/DVN/A9LZNV},
+  url =          {https://doi.org/10.7910/DVN/A9LZNV}
+}
