--- a/gk.bib
+++ b/gk.bib
@@ -27467,3 +27467,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2014},
   publisher =    {Institute of Mathematical Statistics}
 }
+@article{Brunell99,
+  title =        {Partisan Bias in US Congressional Elections,
+                  1952-1996: Why the Senate is Usually More Republican
+                  than the House of Representatives},
+  author =       {Brunell, Thomas L},
+  journal =      {American Politics Quarterly},
+  volume =       {27},
+  number =       {3},
+  pages =        {316--337},
+  year =         {1999},
+  publisher =    {Sage Publications Thousand Oaks}
+}
