--- a/gk.bib
+++ b/gk.bib
@@ -27491,3 +27491,17 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2016},
   publisher =    {Cambridge University Press}
 }
+@article{GroKoeBru97,
+  title =        {An integrated perspective on the three potential
+                  sources of partisan bias: Malapportionment, turnout
+                  differences, and the geographic distribution of
+                  party vote shares},
+  author =       {Grofman, Bernard and Koetzle, William and Brunell,
+                  Thomas},
+  journal =      {Electoral studies},
+  volume =       {16},
+  number =       {4},
+  pages =        {457--470},
+  year =         {1997},
+  publisher =    {Elsevier}
+}
