--- a/gk.bib
+++ b/gk.bib
@@ -27471,7 +27471,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Partisan Bias in US Congressional Elections,
                   1952-1996: Why the Senate is Usually More Republican
                   than the House of Representatives},
-  author =       {Brunell, Thomas L},
+  author =       {Brunell, Thomas},
   journal =      {American Politics Quarterly},
   volume =       {27},
   number =       {3},
