--- a/gk.bib
+++ b/gk.bib
@@ -27493,3 +27493,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1997},
   publisher =    {Elsevier}
 }
+@article{MagMos18,
+  title={A New Approach for Developing Neutral Redistricting Plans},
+  author={Magleby, Daniel B and Mosesson, Daniel B},
+  journal={Political Analysis},
+  volume={26},
+  number={2},
+  pages={147--167},
+  year={2018},
+  publisher={Cambridge University Press}
+}
