--- a/gk.bib
+++ b/gk.bib
@@ -27494,12 +27494,29 @@ Theory Group (Formerly: E1071), TU Wien},
   publisher =    {Elsevier}
 }
 @article{MagMos18,
-  title={A New Approach for Developing Neutral Redistricting Plans},
-  author={Magleby, Daniel B and Mosesson, Daniel B},
-  journal={Political Analysis},
-  volume={26},
-  number={2},
-  pages={147--167},
-  year={2018},
-  publisher={Cambridge University Press}
+  title =        {A New Approach for Developing Neutral Redistricting
+                  Plans},
+  author =       {Magleby, Daniel B and Mosesson, Daniel B},
+  journal =      {Political Analysis},
+  volume =       {26},
+  number =       {2},
+  pages =        {147--167},
+  year =         {2018},
+  publisher =    {Cambridge University Press}
 }
+@article{McDonald17,
+  title =        {The Arithmetic of Electoral Bias, with Applications
+                  to US House Elections},
+  author =       {McDonald, Michael D},
+  year =         {2017}
+}
+
+@TechReport{McDonald17,
+  title =        {The Arithmetic of Electoral Bias, with Applications
+                  to US House Elections},
+  author =       {McDonald, Michael D},
+  year =         2017,
+  institution =  {SUNY Binghamton},
+  note =         {Revised APSA meeting paper, Toronto, CA}
+}
+
