--- a/gk.bib
+++ b/gk.bib
@@ -27511,7 +27511,7 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2017}
 }
 
-@TechReport{McDonald17,
+@Unpublished{McDonald17,
   title =        {The Arithmetic of Electoral Bias, with Applications
                   to US House Elections},
   author =       {McDonald, Michael D},
