--- a/gk.bib
+++ b/gk.bib
@@ -27510,6 +27510,6 @@ Theory Group (Formerly: E1071), TU Wien},
   author =       {McDonald, Michael D},
   year =         2017,
   institution =  {SUNY Binghamton},
-  note =         {Revised APSA meeting paper, Toronto, CA}
+  note =         {Revised 2009 APSA meeting paper, Toronto, CA}
 }
 
