--- a/gk.bib
+++ b/gk.bib
@@ -27512,4 +27512,15 @@ Theory Group (Formerly: E1071), TU Wien},
   institution =  {SUNY Binghamton},
   note =         {Revised 2009 APSA meeting paper, Toronto, CA}
 }
-
+@article{BesDonKra18,
+  title =        {Considering the prospects for establishing a packing
+                  gerrymandering standard},
+  author =       {Best, Robin E and Donahue, Shawn J and Krasno,
+                  Jonathan and Magleby, Daniel B and McDonald, Michael
+                  D},
+  journal =      {Election Law Journal},
+  volume =       {17},
+  number =       {1},
+  pages =        {1--20},
+  year =         {2018}
+}
