--- a/gk.bib
+++ b/gk.bib
@@ -26904,7 +26904,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Can Gerrymanders Be Detected? An Examination of
                   Wisconsin’s State Assembly},
   author =       {Krasno, Jonathan and Magleby, Daniel B and McDonald,
-                  Michael D and Donahue, Shawn and Best, Robin E},
+                  Michael D and Donahue, Shawn J and Best, Robin E},
   journal =      {American Politics Research},
   pages =        {1--40},
   year =         {2018}
