--- a/gk.bib
+++ b/gk.bib
@@ -27524,3 +27524,13 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {1--20},
   year =         {2018}
 }
+@inproceedings{Wimmer10,
+  title =        {Agnostically learning under permutation invariant
+                  distributions},
+  author =       {Wimmer, Karl},
+  booktitle =    {Foundations of Computer Science (FOCS), 2010 51st
+                  Annual IEEE Symposium on},
+  pages =        {113--122},
+  year =         {2010},
+  organization = {IEEE}
+}
