--- a/gk.bib
+++ b/gk.bib
@@ -27528,8 +27528,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Agnostically learning under permutation invariant
                   distributions},
   author =       {Wimmer, Karl},
-  booktitle =    {Foundations of Computer Science (FOCS), 2010 51st
-                  Annual IEEE Symposium on},
+  booktitle =    {51st Annual IEEE Symposium on Foundations of Computer Science},
   pages =        {113--122},
   year =         {2010},
   organization = {IEEE}
