--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1802,8 +1802,7 @@ pages={1037--1060},
   pages =	 {787--824},
   month =	 11,
   number =	 {4},
-  note =
-                  {{http://gking.harvard.edu/files/abs/repstoch-abs.shtml}}
+  url =          {http://j.mp/2o46Gkk}
 }
 
 @article{King89c,
