--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1731,16 +1731,16 @@ pages={1037--1060},
 }
 
 @article{GelKin90,
-  author =	 {Andrew Gelman and Gary King},
-  title =	 {Estimating the Electoral Consequences of Legislative
+  author =       {Andrew Gelman and Gary King},
+  title =        {Estimating the Electoral Consequences of Legislative
                   Redistricting},
-  journal =	 {Journal of the American Statistical Association},
-  volume =	 {85},
-  year =	 {1990},
-  pages =	 {274--282},
-  month =	 6,
-  number =	 {410},
-  note =	 {{http://gking.harvard.edu/files/abs/svstat-abs.shtml}}
+  journal =      {Journal of the American Statistical Association},
+  volume =       {85},
+  year =         {1990},
+  pages =        {274--282},
+  month =        6,
+  number =       {410},
+  url =          {http://j.mp/GerryDem}
 }
 
 @article{GelKin90b,
