--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1740,7 +1740,7 @@ pages={1037--1060},
   pages =        {274--282},
   month =        6,
   number =       {410},
-  url =          {http://j.mp/GerryDem}
+  url =          {j.mp/GerryDem}
 }
 
 @article{GelKin90b,
