--- a/gk.bib
+++ b/gk.bib
@@ -27533,3 +27533,33 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2010},
   organization = {IEEE}
 }
+@article{Cox06,
+  title =        {Designing Redistricting Institutions},
+  author =       {Cox, Adam B},
+  journal =      {Election Law Journal},
+  volume =       {5},
+  number =       {4},
+  pages =        {412--424},
+  year =         {2006},
+  publisher =    {Mary Ann Liebert, Inc. 2 Madison Avenue Larchmont,
+                  NY 10538 USA}
+}
+@article{Rave12,
+  title={Politicians as Fiduciaries},
+  author={Rave, D Theodore},
+  journal={Harv. L. Rev.},
+  volume={126},
+  pages={671},
+  year={2012},
+  publisher={HeinOnline}
+}
+@article{McDonald07,
+  title={Regulating redistricting},
+  author={McDonald, Michael P},
+  journal={PS: Political Science \& Politics},
+  volume={40},
+  number={4},
+  pages={675--679},
+  year={2007},
+  publisher={Cambridge University Press}
+}
